--- a/bdc.html
+++ b/bdc.html
@@ -540,7 +540,7 @@
             <h4 class="text-lg font-bold text-red-700">Check Eligibility</h4>
           </div>
           <p class="mt-4 text-gray-600">Before donating, please ensure you meet the basic eligibility criteria: age,
-            health condition, and travel/medication restrictions. We provide guidelines and a brief self-check.</p>
+            health condition and travel/medication restrictions. We provide guidelines and a brief self-check.</p>
           <a href="#" class="mt-4 inline-block text-sm text-red-600 font-medium hover:underline">Learn more →</a>
         </article>
 
