--- a/bdc.html
+++ b/bdc.html
@@ -469,7 +469,7 @@
           Donate Blood, Save a life
         </h1>
         <p class="mb-8 text-lg text-gray-700 max-w-xl mx-auto md:mx-0">Be a hero in your community. Register as a donor,
-          find blood matches, and join our events to help save lives every day.</p>
+          find blood matches and join our events to help save lives every day.</p>
         <div class="flex flex-col sm:flex-row gap-4 w-full sm:w-auto items-center justify-center md:justify-start">
           <a href="#join"
             class="w-full sm:w-auto text-center bg-gradient-to-r from-red-600 to-red-400 text-white px-8 py-3 rounded-lg font-semibold shadow-lg hover:scale-105 transition">Become
