--- a/bdc.html
+++ b/bdc.html
@@ -965,20 +965,21 @@
     </div>
   </div>
 
+  <!--profile modal-->
   <div id="profile-modal" class="fixed inset-0 hidden items-center justify-center z-50">
     <div class="absolute inset-0 bg-black opacity-40"></div>
     <div class="bg-white rounded-lg shadow p-6 max-w-md mx-4 z-10">
       <h3 class="text-lg font-bold text-red-700 mb-4">Your Profile</h3>
       <form id="profile-form" class="grid grid-cols-1 gap-4">
-        <div class="relative">
+        
+        <div class="relative col-span-2">
           <input name="fullName" id="profile-fullName" type="text" placeholder=" " required
             class="peer block w-full rounded-lg border-2 border-gray-100 bg-white p-4 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none" />
           <label for="profile-fullName"
-            class="absolute left-4 top-4 text-gray-400 transition-all peer-placeholder-shown:top-4 peer-placeholder-shown:text-base peer-focus:-top-3 peer-focus:text-sm peer-focus:text-red-700 peer-valid:-top-3 peer-valid:text-sm peer-valid:text-red-700 pointer-events-none bg-white px-1">Full
-            name</label>
+            class="absolute left-4 top-4 text-gray-400 transition-all peer-placeholder-shown:top-4 peer-placeholder-shown:text-base peer-focus:-top-3 peer-focus:text-sm peer-focus:text-red-700 peer-valid:-top-3 peer-valid:text-sm peer-valid:text-red-700 pointer-events-none bg-white px-1">Full name</label>
         </div>
 
-        <div class="relative">
+        <div class="relative col-span-2">
           <input name="email" id="profile-email" type="email" placeholder=" " readonly
             class="peer block w-full rounded-lg border-2 border-gray-100 bg-white p-4 text-gray-900 shadow-sm focus:border-gray-100 cursor-not-allowed" />
           <label for="profile-email"
@@ -986,7 +987,7 @@
             (cannot be changed)</label>
         </div>
 
-        <div class="relative">
+        <div class="relative col-span-2">
           <input name="phone" id="profile-phone" type="tel" placeholder=" " required
             class="peer block w-full rounded-lg border-2 border-gray-100 bg-white p-4 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none" />
           <label for="profile-phone"
@@ -1060,7 +1061,7 @@
             <optgroup label="Sylhet Division">
               <option>Sylhet</option>
               <option>Sunamganj</option>
-              <option>Moulvibazar</option>
+              <option>Moulvibazar</option> 
               <option>Habiganj</option>
             </optgroup>
             <optgroup label="Rangpur Division">
@@ -1089,7 +1090,7 @@
         </div>
 
         <div class="relative col-span-2">
-          <textarea name="notes" id="profile-notes" rows="4" placeholder=" "
+          <textarea name="notes" id="profile-notes" rows="2" placeholder=" "
             class="peer block w-full rounded-lg border-2 border-gray-100 bg-white p-4 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none"></textarea>
           <label for="profile-notes"
             class="absolute left-4 top-4 text-gray-400 transition-all peer-placeholder-shown:top-4 peer-placeholder-shown:text-base peer-focus:-top-3 peer-focus:text-sm peer-focus:text-red-700 peer-valid:-top-3 peer-valid:text-sm peer-valid:text-red-700 pointer-events-none bg-white px-1">Any
@@ -1098,8 +1099,7 @@
 
         <div class="md:col-span-2">
           <div class="flex gap-3">
-            <button type="submit"
-              class="bg-red-600 text-white px-6 py-3 rounded-lg font-semibold shadow hover:bg-red-700 flex-1 md:flex-none">Save
+            <button type="submit" class="bg-red-600 text-white px-6 py-3 rounded-lg font-semibold shadow hover:bg-red-700 flex-1 md:flex-none">Save
               Changes</button>
           </div>
         </div>
@@ -1110,6 +1110,16 @@
       </div>
     </div>
   </div>
+
+<script>
+  document.getElementById("pf-logout").addEventListener("click", function() {
+    // Logout logic here
+  });
+
+  document.getElementById("pf-close").addEventListener("click", function() {
+    // Close logic here
+  });
+</script>
 </body>
 
 </html>
