--- a/bdc.html
+++ b/bdc.html
@@ -995,7 +995,7 @@
             number</label>
         </div>
 
-        <div class="flex flex-col">
+        <div class="relative">
           <label for="profile-bloodGroup" class="text-sm text-gray-600 mb-2">Blood group</label>
           <select name="bloodGroup" id="profile-bloodGroup" required
             class="block w-full rounded-lg border-2 border-gray-100 bg-white p-3 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none">
