--- a/bdc.html
+++ b/bdc.html
@@ -998,7 +998,7 @@
         <div class="relative">
           <label for="profile-bloodGroup" class="text-sm text-gray-600 mb-2">Blood group</label>
           <select name="bloodGroup" id="profile-bloodGroup" required
-            class="block w-full rounded-lg border-2 border-gray-100 bg-white p-3 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none">
+            class="block w-full rounded-lg border-2 border-gray-100 bg-white p-3 text-gray-700 shadow-sm focus:border-red-300 focus:outline-none">
             <option value="">Select group</option>
             <option>A+</option>
             <option>A-</option>
@@ -1011,10 +1011,10 @@
           </select>
         </div>
 
-        <div class="flex flex-col">
+        <div class="relative">
           <label for="profile-location" class="text-sm text-gray-600 mb-2">Location</label>
           <select name="location" id="profile-location" required
-            class="w-full rounded-lg border-2 border-gray-100 bg-white px-4 py-3 text-gray-700 shadow-sm focus:border-red-300 focus:outline-none">
+            class="block w-full rounded-lg border-2 border-gray-100 bg-white p-3 text-gray-700 shadow-sm focus:border-red-300 focus:outline-none">
             <option value="">Select division / district</option>
             <optgroup label="Dhaka Division">
               <option>Dhaka</option>
