--- a/bdc.html
+++ b/bdc.html
@@ -116,7 +116,7 @@
             <span class="font-bold">Blood Group:</span> <span>${d.bloodGroup}</span>
         </div>
         <div class="text-xs text-gray-600">
-            <span class="font-bold">Location:</span> <span>${d.location || '—'}</span>
+            <span class="font-bold">Current Location:</span> <span>${d.location || '—'}</span>
         </div>
     </div>
     <div class="flex-shrink-0 flex items-center space-x-4">
@@ -666,71 +666,8 @@
                 <option>AB-</option>
               </select>
               <div class="flex-1 w-full">
-                <select id="search-location" aria-label="Location (division/district)"
-                  class="w-full h-12 px-4 rounded-lg border border-gray-100 bg-white text-gray-600 focus:border-red-300 focus:ring-0">
-                  <option value="">Select division / district</option>
-                  <optgroup label="Dhaka Division">
-                    <option>Dhaka</option>
-                    <option>Gazipur</option>
-                    <option>Narayanganj</option>
-                    <option>Munshiganj</option>
-                    <option>Manikganj</option>
-                    <option>Tangail</option>
-                    <option>Kishoreganj</option>
-                    <option>Madaripur</option>
-                    <option>Shariatpur</option>
-                  </optgroup>
-                  <optgroup label="Chattogram Division">
-                    <option>Chattogram</option>
-                    <option>Comilla</option>
-                    <option>Cox's Bazar</option>
-                    <option>Feni</option>
-                    <option>Noakhali</option>
-                    <option>Rangamati</option>
-                    <option>Bandarban</option>
-                    <option>Khagrachari</option>
-                  </optgroup>
-                  <optgroup label="Rajshahi Division">
-                    <option>Rajshahi</option>
-                    <option>Bogra</option>
-                    <option>Naogaon</option>
-                    <option>Natore</option>
-                    <option>Pabna</option>
-                    <option>Sirajganj</option>
-                  </optgroup>
-                  <optgroup label="Khulna Division">
-                    <option>Khulna</option>
-                    <option>Jessore</option>
-                    <option>Kushtia</option>
-                    <option>Satkhira</option>
-                    <option>Bagerhat</option>
-                  </optgroup>
-                  <optgroup label="Barishal Division">
-                    <option>Barishal</option>
-                    <option>Patuakhali</option>
-                    <option>Barguna</option>
-                    <option>Bhola</option>
-                  </optgroup>
-                  <optgroup label="Sylhet Division">
-                    <option>Sylhet</option>
-                    <option>Sunamganj</option>
-                    <option>Moulvibazar</option>
-                    <option>Habiganj</option>
-                  </optgroup>
-                  <optgroup label="Rangpur Division">
-                    <option>Rangpur</option>
-                    <option>Dinajpur</option>
-                    <option>Kurigram</option>
-                    <option>Nilphamari</option>
-                    <option>Lalmonirhat</option>
-                    <option>Gaibandha</option>
-                  </optgroup>
-                  <optgroup label="Mymensingh Division">
-                    <option>Mymensingh</option>
-                    <option>Jamalpur</option>
-                    <option>Sherpur</option>
-                    <option>Netrokona</option>
-                  </optgroup>
+                <select id="search-location" aria-label="Location"
+                  class="w-full h-12 px-4 rounded-lg border border-gray-100 bg-white text-gray-600 focus:border-red-300 focus:ring-0">                                
                 </select>
               </div>
               <button type="submit"
@@ -792,76 +729,13 @@
             </select>
           </div>
 
-          <div class="flex flex-col">
-            <label for="location" class="text-sm text-gray-600 mb-2">Location</label>
-            <select name="location" id="location" required
-              class="w-full rounded-lg border-2 border-gray-100 bg-white px-4 py-3 text-gray-700 shadow-sm focus:border-red-300 focus:outline-none">
-              <option value="">Select division / district</option>
-              <optgroup label="Dhaka Division">
-                <option>Dhaka</option>
-                <option>Gazipur</option>
-                <option>Narayanganj</option>
-                <option>Munshiganj</option>
-                <option>Manikganj</option>
-                <option>Tangail</option>
-                <option>Kishoreganj</option>
-                <option>Madaripur</option>
-                <option>Shariatpur</option>
-              </optgroup>
-              <optgroup label="Chattogram Division">
-                <option>Chattogram</option>
-                <option>Comilla</option>
-                <option>Cox's Bazar</option>
-                <option>Feni</option>
-                <option>Noakhali</option>
-                <option>Rangamati</option>
-                <option>Bandarban</option>
-                <option>Khagrachari</option>
-              </optgroup>
-              <optgroup label="Rajshahi Division">
-                <option>Rajshahi</option>
-                <option>Bogra</option>
-                <option>Naogaon</option>
-                <option>Natore</option>
-                <option>Pabna</option>
-                <option>Sirajganj</option>
-              </optgroup>
-              <optgroup label="Khulna Division">
-                <option>Khulna</option>
-                <option>Jessore</option>
-                <option>Kushtia</option>
-                <option>Satkhira</option>
-                <option>Bagerhat</option>
-              </optgroup>
-              <optgroup label="Barishal Division">
-                <option>Barishal</option>
-                <option>Patuakhali</option>
-                <option>Barguna</option>
-                <option>Bhola</option>
-              </optgroup>
-              <optgroup label="Sylhet Division">
-                <option>Sylhet</option>
-                <option>Sunamganj</option>
-                <option>Moulvibazar</option>
-                <option>Habiganj</option>
-              </optgroup>
-              <optgroup label="Rangpur Division">
-                <option>Rangpur</option>
-                <option>Dinajpur</option>
-                <option>Kurigram</option>
-                <option>Nilphamari</option>
-                <option>Lalmonirhat</option>
-                <option>Gaibandha</option>
-              </optgroup>
-              <optgroup label="Mymensingh Division">
-                <option>Mymensingh</option>
-                <option>Jamalpur</option>
-                <option>Sherpur</option>
-                <option>Netrokona</option>
-              </optgroup>
-            </select>
+          <div class="relative">
+            <input name="location" id="location" type="text" placeholder=" " required
+              class="peer block w-full rounded-lg border-2 border-gray-100 bg-white p-4 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none" />
+            <label for="location"
+              class="absolute left-4 top-4 text-gray-400 transition-all peer-placeholder-shown:top-4 peer-placeholder-shown:text-base peer-focus:-top-3 peer-focus:text-sm peer-focus:text-red-700 peer-valid:-top-3 peer-valid:text-sm peer-valid:text-red-700 pointer-events-none bg-white px-1">Current Location</label>
           </div>
-
+        
           <div class="relative">
             <input name="lastDonateDate" id="lastDonateDate" type="date" placeholder=" "
               class="peer block w-full rounded-lg border-2 border-gray-100 bg-white p-4 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none" />
@@ -995,7 +869,7 @@
             number</label>
         </div>
 
-        <div class="relative">
+        <div class="relative col-span">
           <label for="profile-bloodGroup" class="text-sm text-gray-600 mb-2">Blood group</label>
           <select name="bloodGroup" id="profile-bloodGroup" required
             class="block w-full rounded-lg border-2 border-gray-100 bg-white p-3 text-gray-700 shadow-sm focus:border-red-300 focus:outline-none">
@@ -1011,83 +885,20 @@
           </select>
         </div>
 
-        <div class="relative">
-          <label for="profile-location" class="text-sm text-gray-600 mb-2">Location</label>
-          <select name="location" id="profile-location" required
-            class="block w-full rounded-lg border-2 border-gray-100 bg-white p-3 text-gray-700 shadow-sm focus:border-red-300 focus:outline-none">
-            <option value="">Select division / district</option>
-            <optgroup label="Dhaka Division">
-              <option>Dhaka</option>
-              <option>Gazipur</option>
-              <option>Narayanganj</option>
-              <option>Munshiganj</option>
-              <option>Manikganj</option>
-              <option>Tangail</option>
-              <option>Kishoreganj</option>
-              <option>Madaripur</option>
-              <option>Shariatpur</option>
-            </optgroup>
-            <optgroup label="Chattogram Division">
-              <option>Chattogram</option>
-              <option>Comilla</option>
-              <option>Cox's Bazar</option>
-              <option>Feni</option>
-              <option>Noakhali</option>
-              <option>Rangamati</option>
-              <option>Bandarban</option>
-              <option>Khagrachari</option>
-            </optgroup>
-            <optgroup label="Rajshahi Division">
-              <option>Rajshahi</option>
-              <option>Bogra</option>
-              <option>Naogaon</option>
-              <option>Natore</option>
-              <option>Pabna</option>
-              <option>Sirajganj</option>
-            </optgroup>
-            <optgroup label="Khulna Division">
-              <option>Khulna</option>
-              <option>Jessore</option>
-              <option>Kushtia</option>
-              <option>Satkhira</option>
-              <option>Bagerhat</option>
-            </optgroup>
-            <optgroup label="Barishal Division">
-              <option>Barishal</option>
-              <option>Patuakhali</option>
-              <option>Barguna</option>
-              <option>Bhola</option>
-            </optgroup>
-            <optgroup label="Sylhet Division">
-              <option>Sylhet</option>
-              <option>Sunamganj</option>
-              <option>Moulvibazar</option> 
-              <option>Habiganj</option>
-            </optgroup>
-            <optgroup label="Rangpur Division">
-              <option>Rangpur</option>
-              <option>Dinajpur</option>
-              <option>Kurigram</option>
-              <option>Nilphamari</option>
-              <option>Lalmonirhat</option>
-              <option>Gaibandha</option>
-            </optgroup>
-            <optgroup label="Mymensingh Division">
-              <option>Mymensingh</option>
-              <option>Jamalpur</option>
-              <option>Sherpur</option>
-              <option>Netrokona</option>
-            </optgroup>
-          </select>
-        </div>
-
-        <div class="relative col-span-2">
+        <div class="relative col-span-3">
           <input name="lastDonateDate" id="profile-lastDonateDate" type="date" placeholder=" "
             class="peer block w-full rounded-lg border-2 border-gray-100 bg-white p-4 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none" />
           <label for="profile-lastDonateDate"
             class="absolute left-4 top-4 text-gray-400 transition-all peer-placeholder-shown:top-4 peer-placeholder-shown:text-base peer-focus:-top-3 peer-focus:text-sm peer-focus:text-red-700 peer-valid:-top-3 peer-valid:text-sm peer-valid:text-red-700 pointer-events-none bg-white px-1">Last
             blood donation</label>
         </div>
+
+        <div class="relative">
+            <input name="location" id="profile-location" type="text" placeholder=" "
+              class="peer block w-full rounded-lg border-2 border-gray-100 bg-white p-4 text-gray-900 shadow-sm focus:border-red-300 focus:outline-none" />
+            <label for="location"
+              class="absolute left-4 top-4 text-gray-400 transition-all peer-placeholder-shown:top-4 peer-placeholder-shown:text-base peer-focus:-top-3 peer-focus:text-sm peer-focus:text-red-700 peer-valid:-top-3 peer-valid:text-sm peer-valid:text-red-700 pointer-events-none bg-white px-1">Current Location</label>
+          </div>
 
         <div class="relative col-span-2">
           <textarea name="notes" id="profile-notes" rows="2" placeholder=" "
