--- a/bdc.html
+++ b/bdc.html
@@ -466,7 +466,7 @@
     <section class="relative flex flex-col md:flex-row items-center justify-between py-20 gap-10">
       <div class="flex-1 flex flex-col items-center justify-center text-center md:items-start md:text-left">
         <h1 class="text-4xl sm:text-5xl font-extrabold text-red-700 mb-4 tracking-tight break-words leading-tight">
-          Donate Blood, Save a life
+          Donate Blood, Save life
         </h1>
         <p class="mb-8 text-lg text-gray-700 max-w-xl mx-auto md:mx-0">Be a hero in your community. Register as a donor,
           find blood matches and join our events to help save lives every day.</p>
@@ -654,7 +654,7 @@
             <form id="search-form"
               class="flex flex-col sm:flex-row items-center gap-3 bg-white p-3 rounded-2xl shadow-sm w-full">
               <select id="search-blood" aria-label="Blood group"
-                class="w-full sm:w-44 h-12 px-4 rounded-lg border border-gray-100 bg-white text-gray-700">
+                class="w-full sm:w-50 h-12 px-4 rounded-lg border border-gray-100 bg-white text-gray-700">
                 <option value="">All Blood Groups</option>
                 <option>A+</option>
                 <option>A-</option>
@@ -665,11 +665,7 @@
                 <option>AB+</option>
                 <option>AB-</option>
               </select>
-              <div class="flex-1 w-full">
-                <select id="search-location" aria-label="Location"
-                  class="w-full h-12 px-4 rounded-lg border border-gray-100 bg-white text-gray-600 focus:border-red-300 focus:ring-0">                                
-                </select>
-              </div>
+             
               <button type="submit"
                 class="w-full sm:w-auto h-12 px-6 bg-red-600 text-white rounded-lg font-semibold shadow hover:bg-red-700">Search</button>
             </form>
