Life is Beautiful💜

--- a/bdc.html
+++ b/bdc.html
@@ -655,7 +655,7 @@
               class="flex flex-col sm:flex-row items-center gap-3 bg-white p-3 rounded-2xl shadow-sm w-full">
               <select id="search-blood" aria-label="Blood group"
                 class="w-full sm:w-50 h-12 px-4 rounded-lg border border-gray-100 bg-white text-gray-700">
-                <option value="">All Blood Groups</option>
+                <option value="">All Donor(s)</option>
                 <option>A+</option>
                 <option>A-</option>
                 <option>B+</option>
