Life is Beautiful💜

--- a/bdc.html
+++ b/bdc.html
@@ -613,6 +613,70 @@
       </div>
     </section>
 
+    <section id="events" class="py-12">
+      <h2 class="text-2xl font-extrabold text-red-700">Upcoming Events</h2>
+      <p class="mt-2 text-gray-600">Join our community drives and help save lives - see the event details and register
+        to participate.</p>
+      <div class="mt-6 grid md:grid-cols-2 gap-6">
+        <article
+          class="bg-white rounded-xl shadow-lg p-4 flex gap-4 items-center flex-col sm:flex-row text-center sm:text-left">
+          <div class="flex-shrink-0 w-full sm:w-20">
+            <div class="text-sm font-bold text-red-700">Sept</div>
+            <div class="text-2xl font-extrabold">30</div>
+            <div class="text-xs text-gray-500">2025</div>
+          </div>
+          <div class="flex-1">
+            <h3 class="text-lg font-bold">City Blood Drive</h3>
+            <p class="text-sm text-gray-600">City Hall • 9:00 AM — 4:00 PM</p>
+            <p class="mt-2 text-gray-700">Community blood drive in partnership with City Health Services. Walk-ins
+              welcome; appointments recommended.</p>
+            <div class="mt-3 flex gap-2 justify-center sm:justify-start">
+              <a href="#" class="px-4 py-2 bg-red-600 text-white rounded-md">Register</a>
+              <a href="#" class="px-4 py-2 border rounded-md">Details</a>
+            </div>
+          </div>
+        </article>
+
+        <article
+          class="bg-white rounded-xl shadow-lg p-4 flex gap-4 items-center flex-col sm:flex-row text-center sm:text-left">
+          <div class="flex-shrink-0 w-full sm:w-20">
+            <div class="text-sm font-bold text-red-700">Oct</div>
+            <div class="text-2xl font-extrabold">15</div>
+            <div class="text-xs text-gray-500">2025</div>
+          </div>
+          <div class="flex-1">
+            <h3 class="text-lg font-bold">University Campus</h3>
+            <p class="text-sm text-gray-600">BAUET Campus • 10:00 AM — 3:00 PM</p>
+            <p class="mt-2 text-gray-700">A campus donation drive aimed at students and staff. Bring a photo ID.
+              Refreshments provided.</p>
+            <div class="mt-3 flex gap-2 justify-center sm:justify-start">
+              <a href="#" class="px-4 py-2 bg-red-600 text-white rounded-md">Register</a>
+              <a href="#" class="px-4 py-2 border rounded-md">Details</a>
+            </div>
+          </div>
+        </article>
+
+        <article
+          class="bg-white rounded-xl shadow-lg p-4 flex gap-4 items-center flex-col sm:flex-row text-center sm:text-left">
+          <div class="flex-shrink-0 w-full sm:w-20">
+            <div class="text-sm font-bold text-red-700">Nov</div>
+            <div class="text-2xl font-extrabold">10</div>
+            <div class="text-xs text-gray-500">2025</div>
+          </div>
+          <div class="flex-1">
+            <h3 class="text-lg font-bold">Hospital Community Drive</h3>
+            <p class="text-sm text-gray-600">City Hospital Community Center • 9:00 AM — 5:00 PM</p>
+            <p class="mt-2 text-gray-700">A special donation drive to support local hospital needs. All blood types are
+              needed and appreciated.</p>
+            <div class="mt-3 flex gap-2 justify-center sm:justify-start">
+              <a href="#" class="px-4 py-2 bg-red-600 text-white rounded-md">Register</a>
+              <a href="#" class="px-4 py-2 border rounded-md">Details</a>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
+
     <section id="search" class="py-12">
       <div class="bg-gradient-to-r from-red-50 to-white p-6 rounded-xl shadow-lg">
         <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4">
