--- a/bdc.html
+++ b/bdc.html
@@ -482,7 +482,7 @@
     <section class="relative flex flex-col md:flex-row items-center justify-between py-20 gap-10">
       <div class="flex-1 flex flex-col items-center justify-center text-center md:items-start md:text-left">
         <h1 class="text-4xl sm:text-5xl font-extrabold text-red-700 mb-4 tracking-tight break-words leading-tight">
-          Donate Blood, Save life
+          Donate Blood Save life
         </h1>
         <p class="mb-8 text-lg text-gray-700 max-w-xl mx-auto md:mx-0">Be a hero in your community. Register as a donor,
           find blood matches and join our events to help save lives every day.</p>
@@ -872,7 +872,7 @@
     </div>
   </div>
 
-  <!--profile modal-->
+  
     <!-- Profile Modal -->
     <div id="profile-modal" class="fixed inset-0 hidden items-center justify-center z-50 overflow-y-auto">
         <div class="absolute inset-0 bg-black opacity-40"></div>
