--- a/bdc.html
+++ b/bdc.html
@@ -482,7 +482,7 @@
     <section class="relative flex flex-col md:flex-row items-center justify-between py-20 gap-10">
       <div class="flex-1 flex flex-col items-center justify-center text-center md:items-start md:text-left">
         <h1 class="text-4xl sm:text-5xl font-extrabold text-red-700 mb-4 tracking-tight break-words leading-tight">
-          Donate Blood Save life
+          Donate Blood Save Life
         </h1>
         <p class="mb-8 text-lg text-gray-700 max-w-xl mx-auto md:mx-0">Be a hero in your community. Register as a donor,
           find blood matches and join our events to help save lives every day.</p>
