Life is Beautiful💜

--- a/bdc.html
+++ b/bdc.html
@@ -493,7 +493,7 @@
     <header class="sticky top-0 z-40 bg-white/90 backdrop-blur shadow-lg rounded-b-xl">
         <nav class="max-w-6xl mx-auto flex items-center justify-between px-4 py-2">
             <div class="flex items-center gap-3">
-                <img src="https://placehold.co/40x40/ef4444/ffffff?text=🩸" alt="logo" class="h-10 w-10 rounded-full border-2 border-red-600 shadow" />
+                <img src="image/blood-drop.png" alt="logo" class="h-10 w-10 rounded-full border-2 border-red-600 shadow" />
                 <span class="text-2xl font-extrabold text-red-700 tracking-tight">Blood Donation Community</span>
             </div>
             <div class="hidden md:flex items-center gap-4 text-base font-medium">
@@ -547,7 +547,7 @@
             </div>
             <div class="flex-1 flex justify-center items-center">
                 <div class="relative">
-                    <img src="https://placehold.co/224x224/ef4444/ffffff?text=🩸" alt="blood drop"
+                    <img src="image/blood-drop.png" alt="blood drop"
                         class="w-56 h-56 object-contain drop-shadow-xl animate-bounce-slow" />
                     <div class="absolute bottom-0 left-1/2 -translate-x-1/2 w-40 h-8 bg-red-200 rounded-full blur-xl opacity-60">
                     </div>
