--- a/bdc.html
+++ b/bdc.html
@@ -699,8 +699,6 @@
                     <div class="flex-1">
                         <h3 class="text-lg font-bold">City Blood Drive</h3>
                         <p class="text-sm text-gray-600">City Hall • 9:00 AM — 4:00 PM</p>
-                        <p class="mt-2 text-gray-700">Community blood drive in partnership with City Health Services. Walk-ins
-                            welcome; appointments recommended.</p>
                         <div class="mt-3 flex gap-2 justify-center sm:justify-start">
                             <a href="#" class="px-4 py-2 bg-red-600 text-white rounded-md">Register</a>
                             <a href="#" class="px-4 py-2 border rounded-md">Details</a>
@@ -914,7 +912,7 @@
         </div>
     </footer>
 
-    <div id="success-modal" class="fixed inset-0 hidden items-center justify-center z-50">
+    <div id="success-modal" class="fixed inset-0 hidden items-center justify-center z-60">
         <div class="absolute inset-0 bg-black opacity-40"></div>
         <div class="bg-white rounded-lg shadow p-6 max-w-md mx-4 z-10">
             <h3 class="text-lg font-bold text-red-700">Success!</h3>
@@ -947,11 +945,11 @@
                         <button id="login-cancel" type="button"
                             class="border border-gray-300 text-gray-700 px-4 py-2 rounded font-semibold shadow hover:bg-gray-100 transition">Cancel</button>
                     </div>
-                    <a id="forgot-password-link" href="#"
-                        class="text-xs text-red-700 hover:underline hover:text-red-900 transition-colors duration-200">
-                        Forgot Password?
-                    </a>
                 </div>
+                <a id="forgot-password-link" href="#"
+                    class="block text-center mt-2 text-xs text-red-700 hover:underline hover:text-red-900 transition-colors duration-200">
+                    Forgot Password?
+                </a>
             </form>
         </div>
     </div>
