--- a/bdc.html
+++ b/bdc.html
@@ -113,8 +113,8 @@
         function renderDonorCardPublic(d) {
             const lastDate = d.lastDonateDate ? new Date(d.lastDonateDate).toLocaleDateString() : '—';
             const contactElement = d.isPhoneHidden ? 
-                `<a href="#contact" class="text-red-700 font-semibold hover:text-red-900 transition-colors duration-200">${d.publicComment || 'Contact Admin'}</a>` :
-                `<a href="tel:${d.phone}" class="flex items-center flex-shrink-0 text-xs text-gray-500 hover:text-red-700 transition">
+                `<a href="#contact" class="text-red-700 font-semibold no-underline">${d.publicComment || 'Contact Admin'}</a>` :
+                `<a href="tel:${d.phone}" class="flex items-center flex-shrink-0 text-xs text-gray-500 hover:text-red-700 transition no-underline">
                     <svg class="w-4 h-4 mr-1 text-red-500" fill="currentColor" viewBox="0 0 24 24"><path d="M3 5a2 2 0 012-2h2.5a1 1 0 01.95.684l1 3a1 1 0 01-.217.982L7.5 10.5a11 11 0 005 5l2.834-2.834a1 1 0 01.982-.217l3 1A1 1 0 0121 16.5V19a2 2 0 01-2 2H17c-8.284 0-15-6.716-15-15V5z"/></svg>
                     <span>${d.phone}</span>
                 </a>`;
