Life is Beautiful💜

--- a/bdc.html
+++ b/bdc.html
@@ -1458,7 +1458,7 @@
                 </a>
             </div>
             <br>Developed by Md. Mueid Shahriar </br>
-            CSE, BAUET
+            CSE-16th, BAUET
         </div>
     </footer>
 
